--- a/404.html
+++ b/404.html
@@ -8,6 +8,8 @@
     <title>error_404</title>
   </head>
   <body>
-    <a href=""><img src="/img/error-404.jpg" alt="404" /></a>
+    <a href="https://marianomoraes.github.io/Landing_Page_Final/"
+      ><img src="/img/error-404.jpg" alt="404"
+    /></a>
   </body>
 </html>
