--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
     <title>error_404</title>
   </head>
   <body>
-    <a href="https://marianomoraes.github.io/Landing_Page_Final/"
+    <a href="https://marianomoraes.github.io/Landing_Page_Final/idex.html"
       ><img src="/img/error-404.jpg" alt="404"
     /></a>
   </body>
